
* LUCENE-9956: Expose the getBaseQuery, getDrillDownQueries APIs from DrillDownQuery (Gautam Worah)

* LUCENE-9962: DrillSideways allows sub-classes to provide "drill down" FacetsCollectors. They
  may provide a null collector if they choose to bypass "drill down" facet collection. (Greg Miller)

* LUCENE-8143: SpanBoostQuery has been removed. (Alan Woodward)

Improvements

* LUCENE-9960: Avoid unnecessary top element replacement for equal elements in PriorityQueue. (Dawid Weiss)

* LUCENE-9687: Hunspell support improvements: add API for spell-checking and suggestions, support compound words,
  fix various behavior differences between Java and C++ implementations, improve performance (Peter Gromov, Dawid Weiss)

* LUCENE-9633: Improve match highlighter behavior for degenerate intervals (on non-existing positions).
  (Dawid Weiss)

* LUCENE-9618: Do not call IntervalIterator.nextInterval after NO_MORE_DOCS is returned. (Haoyu Zhai)

* LUCENE-9576: Improve ConcurrentMergeScheduler settings by default, assuming modern I/O.
  Previously Lucene was too conservative, jumping through hoops to detect if disks were SSD-backed.
  In many common modern cases (VMs, RAID arrays, containers, encrypted mounts, non-Linux OS),
  the pessimistic heuristics were wrong, resulting in slower indexing performance. Heuristics were
  also complex and would trigger JDK issues even on unrelated mount points. Merge scheduler defaults
  are now modernized and the heuristics removed. Users with spinning disks that want to maximize I/O
  performance should tweak ConcurrentMergeScheduler. (Robert Muir)

* LUCENE-9463: Query match region retrieval component, passage scoring and formatting
  for building custom highlighters. (Alan Woodward, Dawid Weiss)

* LUCENE-9370: RegExp query is no longer lenient about inappropriate backslashes and
  follows the Java Pattern policy for rejecting illegal syntax.  (Mark Harwood)

* LUCENE-9336: RegExp query now supports \w \W \d \D \s \S expressions.